--- a/parlay/requirements.txt
+++ b/parlay/requirements.txt
@@ -2,6 +2,7 @@ beautifulsoup4==4.6.0
 bs4==0.0.1
 certifi==2018.1.18
 chardet==3.0.4
+cloudinary==1.11.0
 cssselect==1.0.3
 defusedxml==0.5.0
 dj-database-url==0.5.0
@@ -11,14 +12,17 @@ django-appconf==1.0.1
 django-heroku==0.3.1
 django-image-cropping==1.1.0
 django-jet==1.0.7
+django-mathfilters==0.4.0
 easy-thumbnails==2.5
 fake-useragent==0.1.10
 gunicorn==19.7.1
 html2text==2018.1.9
 idna==2.6
 lxml==4.1.1
+mock==2.0.0
 oauthlib==2.0.6
 parse==1.8.2
+pbr==3.1.1
 Pillow==5.0.0
 psycopg2==2.7.4
 psycopg2-binary==2.7.4
