--- a/parlay/requirements.txt
+++ b/parlay/requirements.txt
@@ -1,8 +1,11 @@
+appdirs==1.4.3
+astroid==2.1.0
 beautifulsoup4==4.7.1
 bs4==0.0.1
 certifi==2018.11.29
 chardet==3.0.4
 cloudinary==1.15.0
+colorama==0.4.1
 cssselect==1.0.3
 defusedxml==0.5.0
 dj-database-url==0.5.0
@@ -13,12 +16,16 @@ django-heroku==0.3.1
 django-image-cropping==1.2.0
 django-jet==1.0.8
 django-mathfilters==0.4.0
+django-recaptcha==2.0.2
 easy-thumbnails==2.5
 fake-useragent==0.1.11
 gunicorn==19.9.0
 html2text==2018.1.9
 idna==2.8
+isort==4.3.4
+lazy-object-proxy==1.3.1
 lxml==4.3.0
+mccabe==0.6.1
 mock==2.0.0
 oauthlib==3.0.1
 parse==1.11.1
@@ -27,6 +34,7 @@ Pillow==5.4.1
 psycopg2==2.7.7
 psycopg2-binary==2.7.7
 pyee==5.0.0
+pylint==2.2.2
 pyppeteer==0.0.25
 pyquery==1.4.0
 python3-openid==3.1.0
@@ -35,7 +43,10 @@ requests==2.21.0
 requests-html==0.9.0
 requests-oauthlib==1.2.0
 six==1.12.0
+soupsieve==1.7.3
+tqdm==4.29.1
 urllib3==1.24.1
 w3lib==1.20.0
 websockets==7.0
 whitenoise==4.1.2
+wrapt==1.11.1
